1.5.0 - 2015-XX-XX
  - General changes/additions
    * augtool: new --timing option that prints after each operation how long
      it took
  - Lens changes/additions
    * AptConf: support hash comments
    * AptSources: support options (Issue #295),
                  support brackets with spaces in URI (GH #296)
                  rename test file to test_aptsources.aug
    * Chrony: allow signed numbers and indentation, fix stray EOL entry,
              disallow comment on EOL, add many missing directives and
              options (Miroslav Lichvar, RHBZ#1213281)
    * Dhclient: avoid put ambiguity for node without value (Issue #294)
    * Group: support NIS map, support an overridden and disabled password,
             i.e. `+:*::` (Matt Dainty) (Issue #258)
    * Httpd: add paths to SLES vhosts
             (Jan Doleschal) (Issue #268)
             parse backslashes in directive arguments (Issue #307)
    * Json: add comments support, refactor,
            allow escaped quotes and blackslashes
    * Keepalived: fix space/tag alignments and hanging spaces,
                  add vrrp_mcast_group4 and vrrp_mcast_group6,
                  add more vrrp_instance flags,
                  add mcast/unicast_src_ip and unicast_peer,
                  add missing garp options,
                  add vrrp_script options,
                  expand vrrp_sync_group block,
                  allow notify option
                  (Joe Topjian) (Issue #266)
    * Known_Hosts: refactoring and description fixed
    * MasterPasswd: new lens to parse /etc/master.passwd
                    (Matt Dainty) (Issue #258)
    * Multipath: add various missing keywoards (Olivier Mangold) (Issue #289)
    * Nginx: add non-recursive ambiguities tests
    * Ntp: add support for basic interface syntax
    * OpenShift_Quickstarts: Use Json.lns
    * OpenVPN: add all options available in OpenVPN 2.3o
               (Justin Akers) (Issue #278)
    * Puppetfile: name separator is not mandatory